--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,38 @@
-<h1>Dashboard</h1>
+<h6>Sessions</h6>
+<h3> Welcome, {{name}} ! </h3>
+<p>Here are your sessions</p>
+{{#if sessions}}
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each sessions}}
+                <tr>
+                    <td><a href="/sessions/{{_id}}">{{title}}</a></td>
+                    <td>{{formatDate createdAt}}</td>
+                    <td><span class="dash-status">{{status}}</span></td>
+                    <td>
+                        <a href="/sessions/edit/{{_id}}" class="btn btn-float">
+                            <i class="fas fa-edit"></i>
+                        </a>
+
+                        <form action="/sessions/{{_id}}" method="POST" id="delete-form">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="btn red">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
+{{else}}
+    <p>You have not yet created any sessions!</p>
+{{/if}}
