--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,13 +1,18 @@
-
 <nav class="grey darken-3">
     <div class="nav-wrapper container">
-
         <a href="#!" class="brand-logo center">Session Tracker</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
+        
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="/sessions">Public Sessions</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
+            <a href="/dashboard"><img class="circle responsive-img img-smaller" src="{{ image }}"></a>
+            <a href="/dashboard"><span class="black-text name">{{ name }}</span></a>
+            
+            <li><div class="divider"></div></li>
+            <li><a class="subheader">Menu</a></li>
+            
+            <li><a class="waves-effect" href="/sessions">🌎 Public Sessions 🌏</a></li>
+            <li><a class="waves-effect" href="/dashboard">📈 Dashboard 📉</a></li>
+            <li><a class="waves-effect" href="/auth/logout">Logout ❌</a></li>
         </ul>
     </div>
 </nav>
