--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,6 +8,7 @@
             integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" 
             crossorigin="anonymous" />
         <link rel="stylesheet" href="/css/style.css" >
+        
         <title>Session Tracker</title>
     </head>
     
@@ -19,14 +20,16 @@
         </div>
 
          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.14.1/ckeditor.js" integrity="sha512-P4rrEImABBYtBFdmrFPqF8rjh8iiRiupfQ4KLrBCL8dAivLiM2nh+1bJQeMb2ZglmIlGZdfTtgGdXH6H/hGVeg==" crossorigin="anonymous"></script>
+        <script src="https://cdn.ckeditor.com/ckeditor5/20.0.0/classic/ckeditor.js"></script>
          <script>
              M.Sidenav.init(document.querySelector('.sidenav'))
              M.FormSelect.init(document.querySelector('#status'))
 
-            CKEDITOR.replace('body', {
-                plugins: 'wysiwygarea, toolbar, basicstyles, link'
-            })
+            ClassicEditor
+            .create( document.querySelector( '#body' ) )
+            .catch( error => {
+                console.error( error );
+            } );
         </script>
     </body>
 </html>
