--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,14 +17,14 @@
                     <td><a href="/sessions/{{_id}}">{{title}}</a></td>
                     <td>{{formatDate createdAt}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
-                    <td>
-                        <a href="/sessions/edit/{{_id}}" class="btn btn-float">
+                    <td class="row1">
+                        <a href="/sessions/edit/{{_id}}" class="btn btn-float ">
                             <i class="fas fa-edit"></i>
                         </a>
 
                         <form action="/sessions/{{_id}}" method="POST" id="delete-form">
                             <input type="hidden" name="_method" value="DELETE">
-                            <button type="submit" class="btn red">
+                            <button type="submit" class="btn red ">
                                 <i class="fas fa-trash"></i>
                             </button>
                         </form>
