--- a/views/partials/_add_btn.hbs
+++ b/views/partials/_add_btn.hbs
@@ -1,3 +1,3 @@
 <div class="fixed-action-btn">
-    <a href="/sessions/add" class="btn-floating btn-large waves-effect waves-green black"><i class="fas fa-plus"></i></a>
+    <a href="/sessions/add" class="btn-floating pulse btn-large waves-effect waves-green black"><i class="fas fa-plus"></i></a>
 </div>
